Fixes #53 by allowing the donate box to collapse gracefully
Along with previous commit sorts out the footer, now everything collapses

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -261,6 +261,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .donate-tab-content {
     display: flex;
+    display: -webkit-flex;
+    flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
 }
 
 .tab-families, .tab-hours-home, .tab-hours-hospital {
